[fix] always show scrollbar

--- a/css/main.scss
+++ b/css/main.scss
@@ -46,6 +46,7 @@ body {
   margin-top: 0;
   margin-bottom: 0;
 
+  overflow-y: scroll;
   background-color: black;
   background: url(/img/background.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
